# SLAM_research

./: .gitignore  .gitmodules  2025-3-5_19-57-27--messages.txt  2025-3-5_20-42-19-messages.txt  2025-3-5_21-12-31-messages.txt  2025-3-5_21-22-24-messages.txt  2025-3-7_19-47-8-messages.txt  2025-3-7_19-51-48-messages.txt  2025-3-7_20-15-35-messages.txt  2025-3-7_20-4-40-messages.txt  2025-3-7_20-6-0-messages.txt  2025-3-7_20-9-53-messages.txt  2025-3-7_21-32-1-messages.txt  2025-3-7_21-33-41-messages.txt  2025-3-7_21-54-6-messages.txt  2025-3-7_21-56-41-messages.txt  2025-3-7_22-32-25-messages.txt  2025-3-7_22-34-2-messages.txt  2025-3-7_22-7-23-messages.txt  SLAM_research.code-workspace  messages.txt  readme.md
Experimentos/: GenerateGraphics.py  GenerateGraphics_ArgParser.py  GenerateGraphics_Mult_Figs.py  GenerateGraphics_show_all.py  Graphics_Mult_Figs_control.py
Maps/: 2024.12.06-first_run.pgm  2024.12.06-first_run.yaml
Maps/2024.12.17 - 360 Lidar/: 360_laser_HuberLoss_LimoSlow_labAir.pgm  360_laser_HuberLoss_LimoSlow_labAir.yaml
Maps/2024.12.19/: 360_HuberLoss_LabAir.pgm  360_HuberLoss_LabAir.yaml  360_None_LabAir.pgm  360_None_LabAir.yaml  L1scan_HuberLoss_LabAir.pgm  L1scan_HuberLoss_LabAir.yaml
Maps/2024.12.20/: L1scan_360_HuberLoss_TopOfLimo_LabAir.pgm  (+1 more)
notes/: 2025.01.20__diff_controller.svgz
ros_workspace/src/sensor_analysis/: CMakeLists.txt  package.xml
ros_workspace/src/sensor_analysis/msg/: LaserAngles.msg
ros_workspace/src/sensor_analysis/src/: laser_scan_processor.cpp
rviz config/: 2lidarViews.rviz
(+250 files in other folders)
